--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>One Encryptor</title>
-    <link rel="icon" href="assets/favicon.ico" />
-    <link rel="stylesheet" href="styles.css" />
-    <script src="main.js"></script>
+    <link rel="icon" href="src/assets/favicon.ico" />
+    <link rel="stylesheet" href="src/styles.css" />
+    <script src="src/main.js"></script>
   </head>
   <body>
     <main class="main-container">
